--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
     <div class="by-name">
     <h2>OCaml package documentation</h2>
     <ol>
-    <li><a href="conduit/index.html">conduit</a> <span class="version">1.0.2</span></li>
-    <li><a href="conduit-async/index.html">conduit-async</a> <span class="version">1.0.2</span></li>
-    <li><a href="conduit-lwt/index.html">conduit-lwt</a> <span class="version">1.0.2</span></li>
-    <li><a href="conduit-lwt-unix/index.html">conduit-lwt-unix</a> <span class="version">1.0.2</span></li>
-    <li><a href="mirage-conduit/index.html">mirage-conduit</a> <span class="version">1.0.2</span></li>
+    <li><a href="conduit/index.html">conduit</a> <span class="version">.1.2.0</span></li>
     </ol>
- </body>
- </html>
+    </div>
+  </body>
+</html>
