Update conduit doc to v1.2.0.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="by-name">
     <h2>OCaml package documentation</h2>
     <ol>
-    <li><a href="conduit/index.html">conduit</a> <span class="version">.1.2.0</span></li>
+    <li><a href="conduit/index.html">conduit</a> <span class="version">1.2.0</span></li>
     </ol>
     </div>
   </body>
