Update conduit doc to 1.4.0.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   </head>
   <body>
-    <div class="by-name">
-    <h2>OCaml package documentation</h2>
-    <ol>
-    <li><a href="conduit/index.html">conduit</a> <span class="version">1.2.0</span></li>
-    </ol>
-    </div>
+    <main class="content">
+      <div class="by-name">
+      <h2>OCaml package documentation</h2>
+      <ol>
+      <li><a href="conduit/index.html">conduit</a> <span class="version">1.4.0</span></li>
+      <li><a href="conduit-async/index.html">conduit-async</a></li>
+      <li><a href="conduit-lwt/index.html">conduit-lwt</a></li>
+      <li><a href="conduit-lwt-unix/index.html">conduit-lwt-unix</a></li>
+      <li><a href="mirage-conduit/index.html">mirage-conduit</a> <span class="version">3.1.0</span></li>
+      </ol>
+      </div>
+    </main>
   </body>
 </html>
