--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="by-name">
       <h2>OCaml package documentation</h2>
       <ol>
-      <li><a href="conduit-mirage/index.html">conduit-mirage</a> <span class="version">2.2.1</span></li>
+      <li><a href="conduit-lwt-unix/index.html">conduit-lwt-unix</a> <span class="version">2.2.2</span></li>
       </ol>
       </div>
     </main>
