Update conduit doc to 3.0.0.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       <div class="by-name">
       <h2>OCaml package documentation</h2>
       <ol>
-      <li><a href="conduit/index.html">conduit</a></li>
-      <li><a href="conduit-async/index.html">conduit-async</a></li>
-      <li><a href="conduit-async-ssl/index.html">conduit-async-ssl</a></li>
-      <li><a href="conduit-async-tls/index.html">conduit-async-tls</a></li>
-      <li><a href="conduit-lwt/index.html">conduit-lwt</a></li>
-      <li><a href="conduit-lwt-ssl/index.html">conduit-lwt-ssl</a></li>
-      <li><a href="conduit-lwt-tls/index.html">conduit-lwt-tls</a></li>
-      <li><a href="conduit-mirage/index.html">conduit-mirage</a></li>
-      <li><a href="conduit-tls/index.html">conduit-tls</a></li>
+      <li><a href="conduit/index.html">conduit</a> <span class="version">3.0.0</span></li>
+      <li><a href="conduit-async/index.html">conduit-async</a> <span class="version">3.0.0</span></li>
+      <li><a href="conduit-async-ssl/index.html">conduit-async-ssl</a> <span class="version">3.0.0</span></li>
+      <li><a href="conduit-async-tls/index.html">conduit-async-tls</a> <span class="version">3.0.0</span></li>
+      <li><a href="conduit-lwt/index.html">conduit-lwt</a> <span class="version">3.0.0</span></li>
+      <li><a href="conduit-lwt-ssl/index.html">conduit-lwt-ssl</a> <span class="version">3.0.0</span></li>
+      <li><a href="conduit-lwt-tls/index.html">conduit-lwt-tls</a> <span class="version">3.0.0</span></li>
+      <li><a href="conduit-mirage/index.html">conduit-mirage</a> <span class="version">3.0.0</span></li>
+      <li><a href="conduit-tls/index.html">conduit-tls</a> <span class="version">3.0.0</span></li>
       </ol>
       </div>
     </main>
