--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>index</title>
-    <link rel="stylesheet" href="./odoc.css"/>
+    <link rel="stylesheet" href="./odoc.support/odoc.css"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   </head>
@@ -11,11 +11,11 @@
       <div class="by-name">
       <h2>OCaml package documentation</h2>
       <ol>
-      <li><a href="conduit/index.html">conduit</a> <span class="version">6.2.0</span></li>
-      <li><a href="conduit-async/index.html">conduit-async</a> <span class="version">6.2.0</span></li>
-      <li><a href="conduit-lwt/index.html">conduit-lwt</a> <span class="version">6.2.0</span></li>
-      <li><a href="conduit-lwt-unix/index.html">conduit-lwt-unix</a> <span class="version">6.2.0</span></li>
-      <li><a href="conduit-mirage/index.html">conduit-mirage</a> <span class="version">6.2.0</span></li>
+      <li><a href="conduit/index.html">conduit</a> <span class="version">6.2.1</span></li>
+      <li><a href="conduit-async/index.html">conduit-async</a> <span class="version">6.2.1</span></li>
+      <li><a href="conduit-lwt/index.html">conduit-lwt</a> <span class="version">6.2.1</span></li>
+      <li><a href="conduit-lwt-unix/index.html">conduit-lwt-unix</a> <span class="version">6.2.1</span></li>
+      <li><a href="conduit-mirage/index.html">conduit-mirage</a> <span class="version">6.2.1</span></li>
       </ol>
       </div>
     </main>
