Update conduit doc to 7.1.0.

--- a/conduit-lwt-unix/Conduit_lwt_tls/Server/index.html
+++ b/conduit-lwt-unix/Conduit_lwt_tls/Server/index.html
@@ -15,7 +15,7 @@
   <span><span class="optlabel">?backlog</span>:int <span class="arrow">&#45;&gt;</span></span>
   <span><span class="optlabel">?stop</span>:<span>unit <span class="xref-unresolved">Lwt</span>.t</span> <span class="arrow">&#45;&gt;</span></span>
   <span><span class="optlabel">?timeout</span>:int <span class="arrow">&#45;&gt;</span></span>
-  <span><span class="xref-unresolved">Tls</span>.Config.server <span class="arrow">&#45;&gt;</span></span>
+  <span><span class="type-var">'config</span> <span class="arrow">&#45;&gt;</span></span>
   <span><span class="xref-unresolved">Lwt_unix</span>.sockaddr <span class="arrow">&#45;&gt;</span></span>
   <span><span>(<span><span class="xref-unresolved">Lwt_unix</span>.sockaddr <span class="arrow">&#45;&gt;</span></span>
     <span><span class="xref-unresolved">Lwt_unix</span>.file_descr <span class="arrow">&#45;&gt;</span></span>
